# simjsr

./: .envrc  .gitignore  .template.json  CHANGELOG.md  LICENSE  README.md  lefthook.yaml  pixi.toml  pyproject.toml  tbump.toml  ty.toml
.github/workflows/: docs.yml  release.yml  test.yml
docs/source/: autodoc2_docstrings_parser.py  conf.py  index.md  page1.md  page2.md
examples/cantera_single/: config.yaml
examples/chemkin_multi_composition/: composition.csv  config.yaml
examples/chemkin_multi_temperature/: config.yaml  temperature.csv
examples/chemkin_single/: config.yaml
notebooks/: grimech30.yaml
scripts/: cookiecutter-update.sh  hooks.sh  init.sh  local.sh  lock.sh  setup.sh  view-docs.sh
src/simjsr/: __init__.py  cli.py  config.py  convert.py  layer1.py  layer2.py  run.py  solve.py
src/simjsr/data/: chem.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_convert.py  test_run.py  test_simjsr.py  test_solve.py
tests/data/: run.ipynb
tests/data/grimech3.0/: chem-all.inp  compositions.csv  config.yaml  config_single.yaml  temperatures.csv
tests/data/slow/: chem.yaml
